outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-23_15-16-28/evaluations/problem_eval-5538945790284516810_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance, where weights are adjusted based on remaining nodes and a novel importance metric combining centrality and distance diversity, with a focus on early exploitation and late exploration.}
                                                                                                                                                                                                       ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance, where weights are adjusted based on remaining nodes and a novel importance metric combining centrality and distance diversity, with a focus on early exploitation and late exploration.}
                                                                                                                                                                                                       ^
SyntaxError: unmatched '}'
